2011-04-04  Adam Roben  <aroben@apple.com>

        Attempted Mac build fix

        * WebCore.xcodeproj/project.pbxproj: Marked PlatformCALayer.h and GraphicsLayerCA.h private
        so that WebKit can #include them.

2011-04-04  Malcolm MacLeod  <mmacleod@webmail.co.za>

        Reviewed by Kevin Ollivier.

        [wx] Implement support for temporary files.
        
        https://bugs.webkit.org/show_bug.cgi?id=57772

        * platform/FileSystem.h:
        * platform/wx/FileSystemWx.cpp:
        (WebCore::getFileModificationTime):
        (WebCore::openTemporaryFile):
        (WebCore::closeFile):
        (WebCore::writeToFile):

2011-04-01  Oliver Hunt  <oliver@apple.com>

        Reviewed by Geoffrey Garen.

        Make StructureChain GC allocated
        https://bugs.webkit.org/show_bug.cgi?id=56695

        Update for new Structure marking function

        * bindings/js/JSDOMGlobalObject.cpp:
        (WebCore::JSDOMGlobalObject::markChildren):

2011-04-04  Pavel Feldman  <pfeldman@google.com>

        Reviewed by Yury Semikhatsky.

        Web Inspector: add support for the enumerated types in the protocol.
        https://bugs.webkit.org/show_bug.cgi?id=57761

        * inspector/Inspector.json:
        * inspector/InspectorDebuggerAgent.cpp:
        (WebCore::InspectorDebuggerAgent::setPauseOnExceptions):
        * inspector/InspectorDebuggerAgent.h:
        * inspector/InspectorInstrumentation.cpp:
        (WebCore::InspectorInstrumentation::resourceRetrievedByXMLHttpRequestImpl):
        (WebCore::InspectorInstrumentation::scriptImportedImpl):
        * inspector/InspectorResourceAgent.cpp:
        (WebCore::cachedResourceTypeString):
        (WebCore::InspectorResourceAgent::didReceiveResponse):
        (WebCore::InspectorResourceAgent::setInitialScriptContent):
        (WebCore::InspectorResourceAgent::setInitialXHRContent):
        * inspector/InspectorResourceAgent.h:
        * inspector/front-end/ScriptsPanel.js: