@@ -146,7 +146,8 @@ CanvasRenderingContext2D::~CanvasRenderingContext2D()
 bool CanvasRenderingContext2D::isAccelerated() const
 {
 #if USE(IOSURFACE_CANVAS_BACKING_STORE)
-    return canvas()->buffer()->isAccelerated();
+    ImageBuffer* buffer = canvas()->buffer();
+    return buffer ? buffer->isAccelerated() : false;
 #elif ENABLE(ACCELERATED_2D_CANVAS)
     return m_context3D;
 #else
