@@ -1,3 +1,14 @@
+2011-04-01  Matthew Delaney  <mdelaney@apple.com>
+
+        Reviewed by Simon Fraser.
+
+        [CG] Do not accelerate small canvases
+        https://bugs.webkit.org/show_bug.cgi?id=57596
+
+        No new tests. No outward behavior changes.
+
+        * platform/graphics/cg/ImageBufferCG.cpp:
+
 2011-04-04  Adam Roben  <aroben@apple.com>
 
         Attempted Mac build fix
